--- a/first.html
+++ b/first.html
@@ -1,5 +1,6 @@
 <html>
   <body>
     <h1>Hello htlm filr. This is my First html page.</h1>
+    <a href="/index.html">link to index</a>
   </body>
 </html>
